# docker_sqlx_test

./: .dockerignore  .env  Cargo.toml  docker-compose.yml  docker_commands.txt  dockerfile  readme.md
src/: db_stuff.rs  main.rs  ui.rs
