[package]
name = "docker_sqlx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = [
	"runtime-tokio",
	"tls-rustls",
	"mysql",
	"macros",
	"uuid",
	"chrono",
] }
clearscreen = "2.0.1"
# Diagnostic information / logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Error report handler for panics. For colorful consistent panic logs
color-eyre = "0.6.2"
dotenvy = "0.15.7"
chrono = "0.4.26"

# Use backtrace feature with optimized, pre-compiled code even in debug (basically release mode backtrace)
[profile.dev.package.backtrace]
opt-level = 3
